# micro-stacks

./: README
http-to-actors/: Cargo.toml  wadm.yaml  wasmcloud.toml
http-to-actors/keys/: codespace_account.nk  httpToActors_module.nk
http-to-actors/src/: lib.rs
interfaces/todo/: Cargo.toml  Makefile  build.rs  codegen.toml  interface.mk  todo.smithy
interfaces/todo/html/: org_wasmcloud_interface_todo_todo.html
interfaces/todo/src/: lib.rs  todo.rs
micro-stacks/host-app/: Cargo.toml
micro-stacks/performance-service/: Cargo.toml
micro-stacks/todo-clicker-service/src/wit/: deps.toml  world.wit
micro-stacks/todo-service/: Cargo.toml  wasmcloud.toml
micro-stacks/todo-service/keys/: codespace_account.nk  todo_service_module.nk
micro-stacks/todo-service/src/: lib.rs  ui.rs
micro-stacks/todo-service/ui-remote/: index.js
