[package]
name = "httpToActors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "httpToActors"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
wasmcloud-interface-todo = { path = "../interfaces/todo" }


[profile.release]
# Optimize for small code size
strip = true
lto = true
opt-level = "s"
