[package]
name = "todo-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
form_urlencoded = "1.0"
futures = "0.3"
rust-embed = "6.3.0"
serde_bytes = "0.11"
serde_json ="1.0"
serde = {version = "1.0", features = ["derive"]}

wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
wasmcloud-interface-todo =  { path = "../../interfaces/todo" }
wasmcloud-interface-logging= "0.9"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true